--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,16 +18,23 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ macos-latest, ubuntu-latest ]
         include:
           - os: ubuntu-latest
-            compiler: g++-10
+            cc: gcc
+            cxx: g++
+            generator: Ninja
           - os: macos-latest
-            compiler: clang++
-
+            cc: clang
+            cxx: clang++
+            generator: Ninja
+          - os: windows-2019
+            cc: cl
+            cxx: cl
+            generator: Visual Studio 16 2019
 
     steps:
       - uses: actions/checkout@v2
+      - uses: seanmiddleditch/gha-setup-ninja@master
 
       - name: Install Conan
         id: conan
@@ -36,9 +43,7 @@ jobs:
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-        env:
-          CXX: ${{ matrix.compiler }}
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -G "${{ matrix.generator }}"
 
       - name: Build
         # Build your program with the given configuration
