--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(tests test_example.cpp)
-target_link_libraries(tests doctest::doctest)
+target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
 
 add_test(
         NAME UnitTests
